--- a/vulnerabilities/other/mcafee-epo-rce.yaml
+++ b/vulnerabilities/other/mcafee-epo-rce.yaml
@@ -12,7 +12,7 @@ info:
     making it possible to upload arbitrary files
     to arbitrary directories or overwrite existing ones during archive extraction.
 
-    References:
+    reference:
     - https://swarm.ptsecurity.com/vulnerabilities-in-mcafee-epolicy-orchestrator/
   tags: mcafee,rce
 
