--- a/technologies/clockwork-php-page.yaml
+++ b/technologies/clockwork-php-page.yaml
@@ -3,7 +3,8 @@ info:
   name: Clockwork PHP page exposure
   author: organiccrap
   severity: high
-  # https://twitter.com/damian_89_/status/1250721398747791360
+  reference: https://twitter.com/damian_89_/status/1250721398747791360
+
 requests:
   - method: GET
     path:
