--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -14,15 +14,15 @@ jobs:
         with:
           go-version: 1.14
 
-      - name: Cache Go
-        id: cache-go
-        uses: actions/cache@v2
-        with:
-          path: /home/runner/go
-          key: ${{ runner.os }}-go
+#      - name: Cache Go
+#        id: cache-go
+#        uses: actions/cache@v2
+#        with:
+#          path: /home/runner/go
+#          key: ${{ runner.os }}-go
 
       - name: Installing Nuclei
-        if: steps.cache-go.outputs.cache-hit != 'true'
+#        if: steps.cache-go.outputs.cache-hit != 'true'
         env:
           GO111MODULE: on
         run: |
