--- a/network/ftp-default-creds.yaml
+++ b/network/ftp-default-creds.yaml
@@ -7,7 +7,14 @@ info:
   tags: network,ftp,default-login
 
 network:
-  - payloads:
+
+  - inputs:
+      - data: "USER {{username}}\r\nPASS {{password}}\r\n"
+    host:
+      - "{{Hostname}}:21"
+      - "{{Hostname}}"
+
+    payloads:
       username:
         - admin
         - root
@@ -23,10 +30,7 @@ network:
         - stingray
 
     attack: clusterbomb
-    inputs:
-      - data: "USER {{username}}\r\nPASS {{password}}\r\n"
-    host:
-      - "{{Hostname}}:21"
+
     matchers:
       - type: word
         words:
