--- a/exposed-panels/r-webserver-login.yaml
+++ b/exposed-panels/r-webserver-login.yaml
@@ -1,6 +1,6 @@
-id: r-webserver-panel
+id: r-webserver-login
 info:
-  name: R WebServer Panel
+  name: R WebServer Login
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7132
